Remove create-database SecurityManager privilege gate